--- a/frontend/src/components/PurchaseSuccessModal.module.css
+++ b/frontend/src/components/PurchaseSuccessModal.module.css
@@ -33,7 +33,7 @@
   right: 15px;
   background: none;
   border: none;
-  color: #888;
+  color: #34c759;
   font-size: 1.2rem;
   cursor: pointer;
 }
