--- a/frontend/src/pages/RegistrationPage.module.css
+++ b/frontend/src/pages/RegistrationPage.module.css
@@ -48,3 +48,16 @@
   color: red;
   margin-top: 15px;
 }
+
+/* Кнопка "Назад" */
+.backButton {
+  background: none;
+  border: none;
+  font-size: 16px;
+  font-weight: 500;
+  cursor: pointer;
+  color: #5CA14A;
+  padding: 0;
+  margin-bottom: 25px;
+  display: block;
+}
