--- a/frontend/src/pages/FaqPage.module.css
+++ b/frontend/src/pages/FaqPage.module.css
@@ -27,14 +27,4 @@
 }
 
 /* Кнопка "Назад" */
-.backButton {
-  background: none;
-  border: none;
-  font-size: 16px;
-  font-weight: 500;
-  cursor: pointer;
-  color: #5CA14A;
-  padding: 0;
-  margin-bottom: 25px;
-  display: block;
-}
+.backButton { margin-bottom: 20px; background: none; border: none; font-size: 16px; cursor: pointer; color: #5CA14A; padding: 0; font-weight: bold; }
