Update header background image in CSS

--- a/frontend/src/components/PageLayout.module.css
+++ b/frontend/src/components/PageLayout.module.css
@@ -10,7 +10,7 @@
 
 .header {
   height: 110px;
-  background-image: url('https://i.postimg.cc/28jH8PnZ/image.webp');
+  background-image: url('https://i.postimg.cc/6psSrhnR/sapka-ost-razdelov-sinaa.webp');
   background-size: cover;
   background-position: center;
   background-color: #418300;
