--- a/frontend/src/pages/HomePage.module.css
+++ b/frontend/src/pages/HomePage.module.css
@@ -497,7 +497,7 @@
 /* --- НОВЫЙ СТИЛЬ ДЛЯ ШАПКИ НА ПК --- */
 .headerDesktop {
   height: 250px;
-  background-image: url('https://i.postimg.cc/28jH8PnZ/image.webp');
+  background-image: url('https://i.postimg.cc/J044KLX0/sapka-dla-pk-sin.webp');
   background-size: cover;
   background-position: center;
   background-color: #418300;
